<resources>
    <string name="app_name">andoridFirst</string>
    <string name="app_btnOk">확인</string>
    <string name="app_btn2">보이지 않기</string>
    <string name="app_btn3">사라지기</string>
    <string name="app_ellips">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam risus lorem, tristique vel pellentesque in, suscipit quis odio. Mauris quis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam risus lorem, tristique vel pellentesque in, suscipit quis odio. Mauris quis.</string>
    <string name="app_message1">회원님의 소중한 정보 보호를 위해, 카카오계정의 현재 비밀번호를 확인하여주십시오.</string>
    <string name="app_message2">비밀번호가 기억나지 않으세요 ?</string>
    <string name="app_message3">이메일을 입력해주세요.</string>
    <string name="app_message4">비밀번호</string>
    <string name="app_message5">확인</string>
    <string name="btn_start">START</string>
    <string name="btn_stop">STOP</string>
    <string name="btn_reset">RESET</string>
    <string name="btn_back">Press the button once more within 3 seconds to exit</string>
    <string name="txt_status">상태메시지</string>
</resources>