<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_message1"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/app_message3"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_message4"
        android:inputType="textPassword"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/tvLongClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_message2"
        android:textStyle="bold"
        android:textSize="15sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_btnOk"
        android:textStyle="bold"
        />
</LinearLayout>