<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"/>

    <ImageView
        android:id="@+id/ivPicture2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@android:drawable/alert_dark_frame"
        android:layout_below="@+id/chronometer"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tvMessage2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="button status"
        android:layout_below="@id/ivPicture2"
        android:gravity="center"
        android:textColor="#000000"
        style = "@style/MyTextStyle"
        android:fontFamily="@font/pacifico"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center">
        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start"
            android:background="@drawable/round_button"
            android:textStyle="bold"
            android:textColor="@color/button_color"/>
        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_stop"
            android:background="@drawable/round_button"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:enabled="false"
            android:textColor="#FFFFFF"/>
        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset"
            android:background="@drawable/round_button"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:enabled="false"
            android:textColor="#FFFFFF"/>

    </LinearLayout>
</RelativeLayout>